# cmake-cpp-starter

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt  example.cpp
lib/: CMakeLists.txt  my_project.cpp
scripts/: tidy.sh
src/: CMakeLists.txt  MyClass.cpp  MyClass.h  SomeClass.cpp
tests/: CMakeLists.txt  example_test.cpp
